--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,26 @@
     <title>Ryan Basque</title>
   </head>
   <body>
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+    
+      // Your web app's Firebase configuration
+      const firebaseConfig = {
+        apiKey: "AIzaSyCY1gvzEavy8dMZezjqk8EDkXWOezRa-1c",
+        authDomain: "ryan-basque-portifolio-fa8f4.firebaseapp.com",
+        databaseURL: "https://ryan-basque-portifolio-fa8f4-default-rtdb.firebaseio.com",
+        projectId: "ryan-basque-portifolio-fa8f4",
+        storageBucket: "ryan-basque-portifolio-fa8f4.appspot.com",
+        messagingSenderId: "313152388697",
+        appId: "1:313152388697:web:6a2c615e915f1ceb63fb48"
+      };
+    
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
