feat: meta tag add-ons

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FFFF" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
+    <meta name="author" content="Ryan Ladevig Basque" />
+    <meta name="twitter:card" content="summary_large_image">
     <meta property="og:title" content="Ryan Basque">
     <meta property="og:description" content="Oi! Meu nome é Ryan Basque. Eu penso e construo e interfaces de sistemas!">
-    <meta name="author" content="Ryan Ladevig Basque" />
     <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/ryan-basque-portifolio-fa8f4.appspot.com/o/ryanbasque.png?alt=media&token=8c6043ba-875d-4aa5-b836-da6bc3a815dc">
-    <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="Ryan Basque portifolio">
     <meta name="twitter:image:alt" content="Ryan Basque landing page">
+    <meta name="keywords" content="ryan basque, web, desenvolvimento, portifolio, front-end">
+    <meta name="robots" content="index,follow">
+    <meta name="reply-to" content="ryanbasquedev@gmail.com">
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Ryan Basque</title>
   </head>
